--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <h1> Welcome to Juan's programming Portfolio </h1>
         <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
+        <table>
+            <tbody>
+                <tr>
+                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
       
     </body>
 </html>
