--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <table>
             <tbody>
                 <tr>
-                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
+                <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
+            </tbody>
+        </table>
       
     </body>
 </html>
