--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <h1> Welcome to Juan's programming Portfolio </h1>
         <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
         <table>
-            <tbody>
+            <thead>
                 <tr>
-                <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
-                    </td>
-                <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
-                    </td>
+                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
+                    </th>
+                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                    </th>
                     
-            </tbody>
+            </thead>
         </table>
       
     </body>
