--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                     </th>
                 <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                     </th>
+                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                    </th>
+                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                    </th>
                     
             </thead>
         </table>
