--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <body>
 
 <h1> Welcome to Juan's programming Portfolio </h1>
-        <h2>Welcome to my page!</h2>
         <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
         <table>
             <thead>
@@ -23,6 +22,7 @@
                     
             </thead>
         </table>
+        <h2> Welcome to my page</h2>
       
     </body>
 </html>
