--- a/javascripts.html
+++ b/javascripts.html
@@ -8,4 +8,5 @@
 
 <h1> Welcome to Juan's programming Portfolio </h1>
         <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
+    </body>
         </html>
