--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <table>
             <thead>
                 <tr>
-                <th> <a href="http://jporres.github.io/index.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
+                <th> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
                     </th>
                 <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                     </th>
