--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <tr>
                 <th> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
                     </th>
-                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                <th> <a href="http://jporres.github.io/javascripts.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></a> 
                     </th>
-                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                <th> <a href="http://jporres.github.io/apps.html"<img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
                     </th>
-                <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                <th> <a href="http://jporres.github.io/about.png"<img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
                     </th>
                     
             </thead>
