--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                     </th>
                 <th> <a href="http://jporres.github.io/javascripts.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></a> 
                     </th>
-                <th> <a href="http://jporres.github.io/apps.html"<img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
+                <th> <a href="http://jporres.github.io/apps.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
                     </th>
-                <th> <a href="http://jporres.github.io/about.png"<img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
+                <th> <a href="http://jporres.github.io/about.png"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
                     </th>
                     
             </thead>
