--- a/app.html
+++ b/app.html
@@ -8,5 +8,19 @@
 
 <h1> Welcome to Juan's programming Portfolio </h1>
         <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
+        <table>
+            <thead>
+                <tr>
+                <th> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
+                    </th>
+                <th> <a href="http://jporres.github.io/javascripts.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></a> 
+                    </th>
+                <th> <a href="http://jporres.github.io/app.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
+                    </th>
+                <th> <a href="http://jporres.github.io/about.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
+                    </th>
+                    
+            </thead>
+        </table>
     </body>
-        </html>
+</html>
