--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         </table>
         <h2> Welcome to my page</h2>
       <p> This is my programming portfolio. This is where I will store all of my progress with ll of my programming projects and process. Once I finish this,
-          then I will have a lot of projects to show. The programs I 
+          then I will have a lot of projects to show. The programs I will use will utilize languages like HTML, etc.
     </body>
 </html>
