--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1> Welcome to Juan's programming Portfolio </h1>
         <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
-        <table>
+        <table id=nav-table>
             <thead>
                 <tr>
                 <th> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
