--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <table id=nav-table>
             <thead>
                 <tr>
-                <th> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
+                <th id="nav-id"> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
                     </th>
-                <th> <a href="http://jporres.github.io/javascripts.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></a> 
+                <th id="nav-id"> <a href="http://jporres.github.io/javascripts.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></a> 
                     </th>
-                <th> <a href="http://jporres.github.io/app.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
+                <th id="nav-id"> <a href="http://jporres.github.io/app.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
                     </th>
-                <th> <a href="http://jporres.github.io/about.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
+                <th id="nav-id"> <a href="http://jporres.github.io/about.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
                     </th>
                     
             </thead>
