--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
 
 <h1> Welcome to Juan's programming Portfolio </h1>
-        <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
+        <img src="https://github.com/jporres/jporres.github.io/blob/master/myActualBanner.jpg?raw=true">
         <table id=nav-table>
             <thead>
                 <tr>
