--- a/javascripts.html
+++ b/javascripts.html
@@ -3,21 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>Juan's Programming Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
 
 <h1> Welcome to Juan's programming Portfolio </h1>
-        <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
-        <table>
+        <img src="https://github.com/jporres/jporres.github.io/blob/master/myActualBanner.jpg?raw=true">
+        <table id=nav-table>
             <thead>
                 <tr>
-                <th> <a href="http://jporres.github.io/"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"></a>
+                <th id="nav-id"> <a href="http://jporres.github.io/"><img src="https://github.com/jporres/jporres.github.io/blob/master/home.png?raw=true"></a>
                     </th>
-                <th> <a href="http://jporres.github.io/javascripts.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"></a> 
+                <th id="nav-id"> <a href="http://jporres.github.io/javascripts.html"><img src="https://github.com/jporres/jporres.github.io/blob/master/javascripts.png?raw=true"></a> 
                     </th>
-                <th> <a href="http://jporres.github.io/app.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"></a> 
+                <th id="nav-id"> <a href="http://jporres.github.io/app.html"><img src="https://github.com/jporres/jporres.github.io/blob/master/apps.png?raw=true"></a> 
                     </th>
-                <th> <a href="http://jporres.github.io/about.html"><img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"></a>
+                <th id="nav-id"> <a href="http://jporres.github.io/about.html"><img src="https://raw.githubusercontent.com/jporres/jporres.github.io/master/about%20me.png"></a>
                     </th>
                     
             </thead>
