--- a/javascripts.html
+++ b/javascripts.html
@@ -25,7 +25,7 @@
         </table>
         <h2>
             <a href="https://www.khanacademy.org/computer-programming/porres_bitmoji/4603534899904512">
-  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_Bitmoji.PNG?raw=true" alt="khan" style="width:42px;height:42px;border:0;">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_Bitmoji.PNG?raw=true" alt="khan">
 </a>
         </h2></p>
         
