--- a/javascripts.html
+++ b/javascripts.html
@@ -29,8 +29,14 @@
 </a>
         </p>
         
-    <h2><a href="https://www.khanacademy.org/computer-programming/porres_dancingbitmoji/6283545381928960">porres_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/porres_dancingbitmoji/6283545381928960/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
-        
-    <h2><a href="https://www.khanacademy.org/computer-programming/porres_racingbitmoji/5932681802776576">porres_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/porres_racingbitmoji/5932681802776576/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+    <h2>porres_dancingBitmoji</h2>
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_dancingbitmoji/6283545381928960">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_dancingBitmoji.PNG?raw=true"  alt="khan"></a>
+        </p>
+
+<h2>porres_racingBitmoji</h2>
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_racingbitmoji/5932681802776576">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingBitmoji.PNG?raw=true"  alt="khan"></a>
+        </p>
     </body>
 </html>
