--- a/javascripts.html
+++ b/javascripts.html
@@ -38,5 +38,16 @@
         </p><a href="https://www.khanacademy.org/computer-programming/porres_racingbitmoji/5932681802776576">
   <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingBitmoji.PNG?raw=true"  alt="khan"></a>
         </p>
+
+<h2>porres_dancingbitmojifun</h2>
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_racingfun/5610833822056448">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingFun.PNG?raw=true"  alt="khan"></a>
+        </p>
+
+<h2>porres_resizebitmoji</h2>
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_resizebitmoji/5792084512178176">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_resizeBitmoji.PNG?raw=true"  alt="khan"></a>
+        </p>
+
     </body>
 </html>
