--- a/javascripts.html
+++ b/javascripts.html
@@ -25,28 +25,28 @@
         </table>
         <h2>porres_bitMoji</h2>
         </p><a href="https://www.khanacademy.org/computer-programming/porres_bitmoji/4603534899904512">
-  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_Bitmoji.PNG?raw=true"  alt="khan">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_Bitmoji.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;">
 </a>
         </p>
         
     <h2>porres_dancingBitmoji</h2>
         </p><a href="https://www.khanacademy.org/computer-programming/porres_dancingbitmoji/6283545381928960">
-  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_dancingBitmoji.PNG?raw=true"  alt="khan"></a>
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_dancingBitmoji.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
 <h2>porres_racingBitmoji</h2>
         </p><a href="https://www.khanacademy.org/computer-programming/porres_racingbitmoji/5932681802776576">
-  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingBitmoji.PNG?raw=true"  alt="khan"></a>
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingBitmoji.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
 <h2>porres_dancingbitmojifun</h2>
         </p><a href="https://www.khanacademy.org/computer-programming/porres_racingfun/5610833822056448">
-  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingFun.PNG?raw=true"  alt="khan"></a>
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_racingFun.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
 <h2>porres_resizebitmoji</h2>
         </p><a href="https://www.khanacademy.org/computer-programming/porres_resizebitmoji/5792084512178176">
-  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_resizeBitmoji.PNG?raw=true"  alt="khan"></a>
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_resizeBitmoji.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
     </body>
