--- a/javascripts.html
+++ b/javascripts.html
@@ -49,5 +49,14 @@
   <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_resizeBitmoji.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
+<h2>porres_quiz</h2>
+        </p><a href="https://www.khanacademy.org/computer-programming/juans-bitmoji-quiz/5696679793360896">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/quiztime.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
+
+<h2>porres_Follow</h2>
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_follow/5952025338281984">
+  <img src="https://github.com/jporres/jporres.github.io/blob/master/followtime.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
     </body>
 </html>
