--- a/javascripts.html
+++ b/javascripts.html
@@ -58,5 +58,13 @@
         </p><a href="https://www.khanacademy.org/computer-programming/porres_follow/5952025338281984">
   <img src="https://github.com/jporres/jporres.github.io/blob/master/followtime.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
+
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_formatted_integers/5561300566900736">
+    <img src="https://github.com/jporres/jporres.github.io/blob/master/integers.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
+        
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_drybitmoji/4520105042477056/5439052109545472.png">
+    <img src="https://github.com/jporres/jporres.github.io/blob/master/porres_drybitmoji.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
     </body>
 </html>
