--- a/javascripts.html
+++ b/javascripts.html
@@ -71,5 +71,9 @@
     <img src="https://github.com/jporres/jporres.github.io/blob/master/tb7.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_educationalapp/5927341219348480">
+    <img src="https://github.com/jporres/jporres.github.io/blob/master/educational.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
+
     </body>
 </html>
