--- a/javascripts.html
+++ b/javascripts.html
@@ -75,5 +75,9 @@
     <img src="https://github.com/jporres/jporres.github.io/blob/master/educational.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
+        </p><a href="https://www.khanacademy.org/computer-programming/porres_frogger_fall_2019/5792773717852160">
+    <img src="https://github.com/jporres/jporres.github.io/blob/master/Capture.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
+
     </body>
 </html>
