--- a/javascripts.html
+++ b/javascripts.html
@@ -79,5 +79,9 @@
     <img src="https://github.com/jporres/jporres.github.io/blob/master/Capture.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
         </p>
 
+        </p><a href="https://www.khanacademy.org/computer-programming/juan_rps/5592607531958272">
+    <img src="https://github.com/jporres/jporres.github.io/blob/master/rps.PNG?raw=true"  alt="khan" style="width:300px;height:300px;border:0;"></a>
+        </p>
+
     </body>
 </html>
