--- a/finalproject.html
+++ b/finalproject.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Juan's Programming Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
 
+<h1> Welcome to Juan's programming Portfolio </h1>
+        <img src="https://github.com/jporres/jporres.github.io/blob/master/myActualBannerr.jpg?raw=true">
+        <table id=nav-table>
+            <thead>
+                <tr>
+                <th id="nav-id"> <a href="http://jporres.github.io/"><img src="https://github.com/jporres/jporres.github.io/blob/master/home.png?raw=true"></a>
+                    </th>
+                <th id="nav-id"> <a href="http://jporres.github.io/javascripts.html"><img src="https://github.com/jporres/jporres.github.io/blob/master/javascripts.png?raw=true"></a> 
+                    </th>
+                <th id="nav-id"> <a href="http://jporres.github.io/app.html"><img src="https://github.com/jporres/jporres.github.io/blob/master/apps.png?raw=true"></a> 
+                    </th>
+                <th id="nav-id"> <a href="http://jporres.github.io/about.html"><img src="https://raw.githubusercontent.com/jporres/jporres.github.io/master/about%20me.png"></a>
+                    </th>
+                <th id="nav-id"> <a href="http://jporres.github.io/finalproject.html"><img src="https://github.com/jporres/jporres.github.io/blob/master/final%20project.png?raw=true"></a>
+                    </th>
+                    
+            </thead>
+        </table>
+        <h2> Welcome to my page</h2>
+      <p> This is my programming portfolio. This is where I will store all of my progress with ll of my programming projects and process. Once I finish this,
+          then I will have a lot of projects to show. The programs I will use will utilize languages like HTML, etc.
+    </body>
+</html>
