--- a/app.html
+++ b/app.html
@@ -20,6 +20,8 @@
                     </th>
                 <th id="nav-id"> <a href="http://jporres.github.io/about.html"><img src="https://raw.githubusercontent.com/jporres/jporres.github.io/master/about%20me.png"></a>
                     </th>
+                <th id="nav-id"> <a href="http://jporres.github.io/finalproject.html"><img src="https://github.com/jporres/jporres.github.io/blob/master/final%20project.png?raw=true"></a>
+                    </th>
                     
             </thead>
         </table>
