--- a/finalproject.html
+++ b/finalproject.html
@@ -26,7 +26,7 @@
             </thead>
         </table>
         <h2> Welcome to my page</h2>
-      <p> This is my programming portfolio. This is where I will store all of my progress with ll of my programming projects and process. Once I finish this,
-          then I will have a lot of projects to show. The programs I will use will utilize languages like HTML, etc.
+      <p> The program my partner and I made, named Rocket Man or “RocketMan”, is <br> a game that is very similar to a famous game from a couple of years ago. Rocket <br> Man is a game akin to the hit mobile game “Flappy Bird”, where they both share <br> the same basic idea that you play as a bird who avoids pipes/obstacles. Though, <br> this game has its fair share of differences. In the game my partner Andrew King <br> and I made, we have added other things, such as levels, gems (or coins), and different control styles.  <br> Something that my partner and I did to have players <br> differentiate the two games from each other is not only add gems and levels, but <br> we also added a game mechanism that makes the game more difficult as the play <br> progresses through each level. As the player avoids the obstacles, they earn a <br> point to their score and also earn an extra point to their score whenever they get a <br> gem, and we hope to have every player achieve the highest possible score possible!
+
     </body>
 </html>
