--- a/finalproject.html
+++ b/finalproject.html
@@ -25,8 +25,9 @@
                     
             </thead>
         </table>
-        <h2> Welcome to my page</h2>
+        <h2> Welcome to my Final Project!</h2>
       <p> The program my partner and I made, named Rocket Man or “RocketMan”, is <br> a game that is very similar to a famous game from a couple of years ago. Rocket <br> Man is a game akin to the hit mobile game “Flappy Bird”, where they both share <br> the same basic idea that you play as a bird who avoids pipes/obstacles. Though, <br> this game has its fair share of differences. In the game my partner Andrew King <br> and I made, we have added other things, such as levels, gems (or coins), and different control styles.  <br> Something that my partner and I did to have players <br> differentiate the two games from each other is not only add gems and levels, but <br> we also added a game mechanism that makes the game more difficult as the play <br> progresses through each level. As the player avoids the obstacles, they earn a <br> point to their score and also earn an extra point to their score whenever they get a <br> gem, and we hope to have every player achieve the highest possible score possible!
-
+        <h2><a href="https://www.khanacademy.org/computer-science/rocketman/5711214948663296">RocketMan</a></h2><script src="https://www.khanacademy.org/computer-programming/rocketman/5711214948663296/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TDu7H_RDU1Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
